kube/server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: oasa-server
  name: oasa-server
  namespace: oasa-telemat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oasa-server
  template:
    metadata:
      labels:
        app: oasa-server
    spec:
      containers:
      - image: localhost:5000/webapp:0.0.1
        name: oasa-server
        ports:
        - containerPort: 8082
