kube/server/admin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: admin-ingress
  namespace: oasa-telemat
spec:
  rules:
  - host: admin.opsw.gr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: admin-service
            port:
              number: 80
  tls: 
    - 
      hosts: 
        - admin.opsw.gr
      secretName: tls-secret-v2
