kube/server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: oasa-telemat
  # annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: api.opsw.gr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: oasa-server-svc
            port:
              number: 80
  tls: 
    - 
      hosts: 
        - api.opsw.gr
      secretName: tls-secret
